--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
+    "@tailwindcss/typography": "^0.2.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
